--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 hello, this is my home on the internet.
+
+要看的东西：
+
+1.github pages
+2.域名解析
+3.了解静态博客
+4.了解mkdocs、hexo、Jekyll等静态博客
+5.看看有哪些静态博客
+6.使用markdown搭建静态博客
+7.LOFTER可以配置自己的独立域名
+8.QQ邮箱使用自己的域名邮箱。
