--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="top-menu">
 				    <span class="menu"> </span>
 					    <ul>
-							<li><a href="www.baidu.com" class="scroll">ABOUT</a></li>
+							<li><a href='http://www.baidu.com'  >ABOUT</a></li>
 							<li><a href="#WORK" class="scroll">WORK</a></li>
-							<li><a href="http://weiwandexuanlu.lofter.com" class="scroll">LIFE</a></li>
+							<li><a href='http://weiwandexuanlu.lofter.com' >LIFE</a></li>
 							<li><a href="#CONTACT" class="scroll">CONTACT</a></li>
 							<div class="clearfix"></div>
 						</ul>
