--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li><a href='http://www.baidu.com'  >ABOUT</a></li>
 							<li><a href="#WORK" class="scroll">WORK</a></li>
 							<li><a href='http://weiwandexuanlu.lofter.com' >LIFE</a></li>
-							<li><a href="#CONTACT" class="scroll">CONTACT</a></li>
+							<li><a href="note.html">NOTE</a></li>
 							<div class="clearfix"></div>
 						</ul>
 				    </div>
