--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="top-menu">
 				    <span class="menu"> </span>
 					    <ul>
-							<li><a href='#'  >ABOUT</a></li>
+							<li><a href='http://about.xchauncy.com'  >ABOUT</a></li>
 							<li><a href="#WORK" >WORK</a></li>
 							<li><a href='http://life.xchauncy.com' >LIFE</a></li>
 							<li><a href="note.html">NOTE</a></li>
