--- a/eclipse.html
+++ b/eclipse.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>note</title>
+<title>MarkdownPad Document</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style type="text/css">
 /* GitHub stylesheet for MarkdownPad (http://markdownpad.com) */
@@ -291,54 +291,87 @@ img {
 </style>
 </head>
 <body>
-<h1><strong>welcome to my Notes!</strong></h1>
-<h2><a href="spring.html">Spring学习笔记</a></h2>
+<h1>eclipse快捷键</h1>
+<h2>和编辑相关的快捷键</h2>
 <blockquote>
-<ul>
-<li>IOC:控制反转</li>
-<li>DI:依赖注入</li>
-<li>AOP:面向接口编程</li>
-<li>Spring AOP API</li>
-<li>Spring事务管理 </li>
-</ul>
+<p>1.【ALT+/】</p>
+<p>此快捷键为用户编辑的好帮手，能为用户提供内容的辅助，不要为记不全方法和属性名称犯愁，当记不全类、方法和属性的名字时，多体验一下【ALT+/】快捷键带来的好处吧。</p>
+<p>2.【Ctrl+O】</p>
+<p>显示类中方法和属性的大纲，能快速定位类的方法和属性，在查找Bug时非常有用。</p>
+<p>3.【Ctrl+/】</p>
+<p>快速添加注释，能为光标所在行或所选定行快速添加注释或取消注释，在调试的时候可能总会需要注释一些东西或取消注释，现在好了，不需要每行进行重复的注释。</p>
+<p>4.【Ctrl+D】</p>
+<p>删除当前行，这也是笔者的最爱之一，不用为删除一行而按那么多次的删除键。</p>
+<p>5.【Ctrl+M】</p>
+<p>窗口最大化和还原，用户在窗口中进行操作时，总会觉得当前窗口小（尤其在编写代码时），现在好了，试试【Ctrl+M】快捷键。</p>
 </blockquote>
-<h2><a href="hibernate.html">Hibernate学习笔记</a></h2>
+<h2>查看和定位快捷键</h2>
 <blockquote>
-<ul>
-<li>获取Session对象</li>
-<li>hibernate.cfg.xml配置</li>
-<li>**.hbm.xml配置</li>
-<li>一对多配置与使用</li>
-<li>多对一配置与使用</li>
-<li>多对多配置与使用</li>
-<li>Hibernate缓存的使用</li>
-</ul>
+<p>1.【Ctrl+K】、【Ctrl++Shift+K】</p>
+<p>快速向下和向上查找选定的内容，从此不再需要用鼠标单击查找对话框了。</p>
+<p>2.【Ctrl+Shift+T】</p>
+<p>查找工作空间（Workspace）构建路径中的可找到Java类文件，不要为找不到类而痛苦，而且可以使用“*”、“？”等通配符。</p>
+<p>3.【Ctrl+Shift+R】</p>
+<p>和【Ctrl+Shift+T】对应，查找工作空间（Workspace）中的所有文件（包括Java文件），也可以使用通配符。</p>
+<p>4.【Ctrl+Shift+G】</p>
+<p>查找类、方法和属性的引用。这是一个非常实用的快捷键，例如要修改引用某个方法的代码，可以通过【Ctrl+Shift+G】快捷键迅速定位所有引用此方法的位置。</p>
+<p>5.【Ctrl+Shift+O】</p>
+<p>快速生成import，当从网上拷贝一段程序后，不知道如何import进所调用的类，试试【Ctrl+Shift+O】快捷键，一定会有惊喜。</p>
+<p>6.【Ctrl+Shift+F】</p>
+<p>格式化代码，书写格式规范的代码是每一个程序员的必修之课，当看见某段代码极不顺眼时，选定后按【Ctrl+Shift+F】快捷键可以格式化这段代码，如果不选定代码则默认格式化当前文件（Java文件）。</p>
+<p>7.【ALT+Shift+W】</p>
+<p>查找当前文件所在项目中的路径，可以快速定位浏览器视图的位置，如果想查找某个文件所在的包时，此快捷键非常有用（特别在比较大的项目中）。</p>
+<p>8.【Ctrl+L】</p>
+<p>定位到当前编辑器的某一行，对非Java文件也有效。</p>
+<p>9.【Alt+←】、【Alt+→】</p>
+<p>后退历史记录和前进历史记录，在跟踪代码时非常有用，用户可能查找了几个有关联的地方，但可能记不清楚了，可以通过这两个快捷键定位查找的顺序。</p>
+<p>10.【F3】</p>
+<p>快速定位光标位置的某个类、方法和属性。</p>
+<p>11.【F4】</p>
+<p>显示类的继承关系，并打开类继承视图。</p>
 </blockquote>
-<h2><a href="struts2.html">Struts2学习笔记</a></h2>
+<h2>调试快捷键</h2>
 <blockquote>
-<ul>
-<li>访问Servlet API</li>
-<li>Action搜索顺序</li>
-<li>动态方法调用</li>
-<li>通配符的使用</li>
-<li>指定多个配置文件</li>
-<li>默认Action</li>
-<li>Struts2后缀</li>
-<li>接收参数</li>
-<li>input 表单输入</li>
-<li>处理结果类型</li>
-<li>Struts2 拦截器</li>
-</ul>
+<p>1.【Ctrl+Shift+B】：在当前行设置断点或取消设置的断点。</p>
+<p>2.【F11】：调试最后一次执行的程序。</p>
+<p>3.【Ctrl+F11】：运行最后一次执行的程序。</p>
+<p>4.【F5】：跟踪到方法中，当程序执行到某方法时，可以按【F5】键跟踪到方法中。</p>
+<p>5.【F6】：单步执行程序。</p>
+<p>6.【F7】：执行完方法，返回到调用此方法的后一条语句。</p>
+<p>7.【F8】：继续执行，到下一个断点或程序结束。</p>
 </blockquote>
-<h2><a href="eclipse.html">eclipse快捷键</a></h2>
+<h2>常用编辑器快捷键</h2>
 <blockquote>
-<ul>
-<li>和编辑相关的快捷键</li>
-<li>查看和定位快捷键</li>
-<li>调试快捷键</li>
-<li>常用编辑器快捷键</li>
-<li>其他快捷键</li>
-</ul>
+<p>1.【Ctrl+C】：复制。</p>
+<p>2.【Ctrl+X】：剪切。</p>
+<p>3.【Ctrl+V】：粘贴。</p>
+<p>4.【Ctrl+S】：保存文件。</p>
+<p>5.【Ctrl+Z】：撤销。</p>
+<p>6.【Ctrl+Y】：重复。</p>
+<p>7.【Ctrl+F】：查找。</p>
+</blockquote>
+<h2>其他快捷键</h2>
+<blockquote>
+<ol>
+<li>
+<p>【Ctrl+F6】：切换到下一个编辑器。</p>
+</li>
+<li>
+<p>【Ctrl+Shift+F6】：切换到上一个编辑器。</p>
+</li>
+<li>
+<p>【Ctrl+F7】：切换到下一个视图。</p>
+</li>
+<li>
+<p>【Ctrl+Shift+F7】：切换到上一个视图。</p>
+</li>
+<li>
+<p>【Ctrl+F8】：切换到下一个透视图。</p>
+</li>
+<li>
+<p>【Ctrl+Shift+F8】：切换到上一个透视图。</p>
+</li>
+</ol>
 </blockquote>
 
 </body>
